interface/efp.f90


! efp_result_t efp_get_induced_dipole_count(struct efp *efp, size_t *n_dip);
function efp_get_induced_dipole_count(efp, n_dip) bind(c)
  use iso_c_binding, only: c_int, c_ptr
  integer(c_int) :: efp_get_induced_dipole_count
  type(c_ptr), value :: efp
  type(c_ptr), value :: n_dip
end function

! efp_result_t efp_get_induced_dipole_coordinates(struct efp *efp, double *xyz);
function efp_get_induced_dipole_coordinates(efp, xyz) bind(c)
  use iso_c_binding, only: c_int, c_ptr
  integer(c_int) :: efp_get_induced_dipole_coordinates
  type(c_ptr), value :: efp
  type(c_ptr), value :: xyz
end function

! efp_result_t efp_get_induced_dipole_values(struct efp *efp, double *dip);
function efp_get_induced_dipole_values(efp, dip) bind(c)
  use iso_c_binding, only: c_int, c_ptr
  integer(c_int) :: efp_get_induced_dipole_values
  type(c_ptr), value :: efp
  type(c_ptr), value :: dip
end function

! efp_result_t efp_get_induced_dipole_conj_values(struct efp *efp, double *dip);
function efp_get_induced_dipole_conj_values(efp, dip) bind(c)
  use iso_c_binding, only: c_int, c_ptr
  integer(c_int) :: efp_get_induced_dipole_conj_values
  type(c_ptr), value :: efp
  type(c_ptr), value :: dip
end function

! efp_result_t efp_get_lmo_count(struct efp *efp, size_t frag_idx, size_t *n_lmo);
function efp_get_lmo_count(efp, frag_idx, n_lmo) bind(c)
  use iso_c_binding, only: c_int, c_ptr, c_size_t
  integer(c_int) :: efp_get_lmo_count
  type(c_ptr), value :: efp
  integer(c_size_t), value :: frag_idx
  type(c_ptr), value :: n_lmo
end function

! efp_result_t efp_get_lmo_coordinates(struct efp *efp, size_t frag_idx, double *xyz);
function efp_get_lmo_coordinates(efp, frag_idx, xyz) bind(c)
  use iso_c_binding, only: c_int, c_ptr, c_size_t
  integer(c_int) :: efp_get_lmo_coordinates
  type(c_ptr), value :: efp
  integer(c_size_t), value :: frag_idx
  type(c_ptr), value :: xyz
end function

! efp_result_t efp_get_xrfit(struct efp *efp, size_t frag_idx, double *xrfit);
function efp_get_xrfit(efp, frag_idx, xrfit) bind(c)
  use iso_c_binding, only: c_int, c_ptr, c_size_t
  integer(c_int) :: efp_get_xrfit
  type(c_ptr), value :: efp
  integer(c_size_t), value :: frag_idx
  type(c_ptr), value :: xrfit
end function

! efp_result_t efp_get_energy(struct efp *efp, struct efp_energy *energy);
function efp_get_energy(efp, energy) bind(c)
  use iso_c_binding, only: c_int, c_ptr
  integer(c_int) :: efp_get_energy
  type(c_ptr), value :: efp
  type(c_ptr), value :: energy
end function

! efp_result_t efp_get_gradient(struct efp *efp, double *grad);
function efp_get_gradient(efp, grad) bind(c)
  use iso_c_binding, only: c_int, c_ptr
  integer(c_int) :: efp_get_gradient
  type(c_ptr), value :: efp
  type(c_ptr), value :: grad
end function

! efp_result_t efp_get_frag_count(struct efp *efp, size_t *n_frag);
function efp_get_frag_count(efp, n_frag) bind(c)
  use iso_c_binding, only: c_int, c_ptr
  integer(c_int) :: efp_get_frag_count
  type(c_ptr), value :: efp
  type(c_ptr), value :: n_frag
end function

! efp_result_t efp_get_frag_name(struct efp *efp, size_t frag_idx, size_t size, char *frag_name);
function efp_get_frag_name(efp, frag_idx, size, frag_name) bind(c)
  use iso_c_binding, only: c_int, c_ptr, c_size_t, c_char
  integer(c_int) :: efp_get_frag_name
  type(c_ptr), value :: efp
  integer(c_size_t), value :: frag_idx
  integer(c_size_t), value :: size
  character(kind=c_char), dimension(*) :: frag_name
end function

! efp_result_t efp_get_frag_mass(struct efp *efp, size_t frag_idx, double *mass_out);
function efp_get_frag_mass(efp, frag_idx, mass_out) bind(c)
  use iso_c_binding, only: c_int, c_ptr, c_size_t
  integer(c_int) :: efp_get_frag_mass
  type(c_ptr), value :: efp
  integer(c_size_t), value :: frag_idx
  type(c_ptr), value :: mass_out
end function

! efp_result_t efp_get_frag_inertia(struct efp *efp, size_t frag_idx, double *inertia_out);
function efp_get_frag_inertia(efp, frag_idx, inertia_out) bind(c)
  use iso_c_binding, only: c_int, c_ptr, c_size_t
  integer(c_int) :: efp_get_frag_inertia
  type(c_ptr), value :: efp
  integer(c_size_t), value :: frag_idx
  type(c_ptr), value :: inertia_out
end function

! efp_result_t efp_get_frag_atom_count(struct efp *efp, size_t frag_idx, size_t *n_atoms);
function efp_get_frag_atom_count(efp, frag_idx, n_atoms) bind(c)
  use iso_c_binding, only: c_int, c_ptr, c_size_t
  integer(c_int) :: efp_get_frag_atom_count
  type(c_ptr), value :: efp
  integer(c_size_t), value :: frag_idx
  type(c_ptr), value :: n_atoms
end function

! efp_result_t efp_get_frag_atoms(struct efp *efp, size_t frag_idx, size_t size, struct efp_atom *atoms);
function efp_get_frag_atoms(efp, frag_idx, size, atoms) bind(c)
  use iso_c_binding, only: c_int, c_ptr, c_size_t
  integer(c_int) :: efp_get_frag_atoms
  type(c_ptr), value :: efp
  integer(c_size_t), value :: frag_idx
  integer(c_size_t), value :: size
  type(c_ptr), value :: atoms
end function

! efp_result_t efp_get_electric_field(struct efp *efp, size_t frag_idx, const double *xyz, double *field);
function efp_get_electric_field(efp, frag_idx, xyz, field) bind(c)
  use iso_c_binding, only: c_int, c_ptr, c_size_t
  integer(c_int) :: efp_get_electric_field
  type(c_ptr), value :: efp
  integer(c_size_t), value :: frag_idx
  type(c_ptr), value :: xyz
  type(c_ptr), value :: field
end function

! void efp_torque_to_derivative(const double *euler, const double *torque, double *deriv);
subroutine efp_torque_to_derivative(euler, torque, deriv) bind(c)
  use iso_c_binding, only: c_ptr
  type(c_ptr), value :: euler
  type(c_ptr), value :: torque
  type(c_ptr), value :: deriv
end subroutine

! void efp_shutdown(struct efp *efp);
subroutine efp_shutdown(efp) bind(c)
  use iso_c_binding, only: c_ptr
  type(c_ptr), value :: efp
end subroutine

end interface
end module efp
